# SoLE

./: CMakeLists.txt  README.md  main.cpp
google-tests/: CMakeLists.txt  csr_matrix_tests.cpp  dense_matrix_tests.cpp  householder_transformation_tests.cpp  tridiagonal_matrix_tests.cpp  vector_algebra_test.cpp
practical-tests/: CMakeLists.txt  iteration_test.cpp
practical-tests/data/: data_task3.txt  data_task4_gauss-seidel.txt  data_task4_jacoby.txt  data_task4_simple.txt
source/: CMakeLists.txt
source/csr_matrix/: csr_matrix.cpp  csr_matrix.h
source/dense_matrix/: dense_matrix.cpp  dense_matrix.h
source/householder_transformation/: householder_transformation.cpp  householder_transformation.h
source/iterative_methods/: iterative_methods.cpp  iterative_methods.h
source/tridiagonal_matrix/: tridiagonal_matrix.cpp  tridiagonal_matrix.h  tridiagonal_matrix_solver.cpp  tridiagonal_matrix_solver.h
source/vector_algebra/: vector_algebra.cpp  vector_algebra.h
tridiagonal_matrix/: tridiagonal_matrix.cpp  tridiagonal_matrix.h  tridiagonal_matrix_solver.cpp  tridiagonal_matrix_solver.h
